# mathcrew

./: README.md  pyproject.toml
mathcrew/: run.py
mathcrew/configs/: deployment.json
